syntax = "proto3";

package rv.data;

import "basicTypes.proto";
import "slide.proto";
import "action.proto";

message Template {

  message Slide {
    rv.data.Slide base_slide = 1;
    string name = 2;
    repeated rv.data.Action actions = 3;

  }
  message Document {
    rv.data.ApplicationInfo application_info = 1;
    repeated rv.data.Template.Slide slides = 3;

  }
}
